# cloudSnip

./: .gitignore  main.py  mlflow.db  nginx.conf  ngrok.yml  pyproject.toml  statistics.txt
cloudSnip/: clac_statistics.py  config.yml  dataset.py  decoder.py  f2p_unet_model.py  inference.py  lightning.py  loss.py  main.py  main_light.py  main_optuna.py  model.py  test.py  transforms.py
cloudSnip/processing/: liss4_processing.ipynb  main.py  pyproject.toml
mlartifacts/912760314320459937/models/m-5b9bbe864d7f49a2881709751c337bcc/artifacts/: MLmodel  conda.yaml  requirements.txt
mlartifacts/912760314320459937/models/m-686c74d4841b4f588399e09495badaad/artifacts/: MLmodel  conda.yaml  python_env.yaml
mlartifacts/912760314320459937/models/m-87019c1046234d258e22aebac8ee443a/artifacts/: MLmodel
notebooks/: base.ipynb
