[project]
name = "cloudsnip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "optuna>=4.4.0",
    "rasterio>=1.4.3",
    "ruff>=0.12.1",
    "torchgeo>=0.7.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
